--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.js" integrity="sha512-BgV3bZfMmUklIZI+dP0SILdmQ0RBY2gxegFFyfgo4Ui56WhKF4Pny9LsV/l96jxDDA+2w47zAXA4IyHo2UT/Qg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -9,7 +11,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
+
   <body data-sveltekit-preload-data="hover" class="bg-slate-950 text-white relative">
     <div style="display: contents" class="relative z-[1]">%sveltekit.body%</div>
+    <div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity -70">
+      <div class="absolute inset-0" id="particles-js"></div>
+    </div>
+    <script>
+      particlesJS.load("particles-js", "assets/particles.json", function () {
+        console.log("Callback - particles.js config loaded");
+      });
+    </script>
   </body>
 </html>
